optimizations in setup script, so now the distribution package is much smaller

--- a/src/preferences.ini
+++ b/src/preferences.ini
@@ -1,8 +1,8 @@
 [General]
 last_visited_directory=C:\\Users\\Alberto\\Videos\\film
 renaming_rule=title.(.year.duration.).language
-stats_agreement=0
-first_time=false
+stats_agreement=1
+first_time=true
 duration_representation=0
 language_representation=1
 words_separator=0
