catch enzyme parsing errors

--- a/src/preferences.ini
+++ b/src/preferences.ini
@@ -1,5 +1,5 @@
 [General]
-last_visited_directory=C:\\Users\\Alberto\\Videos\\film
+last_visited_directory=/home/alberto/Video
 renaming_rule=title.(.year.duration.).language
 stats_agreement=1
 first_time=true
