--- a/src/preferences.ini
+++ b/src/preferences.ini
@@ -1,6 +1,6 @@
 [General]
-last_visited_directory=/home/alberto/Video
-renaming_rule=title.(.year.duration.).language
+last_visited_directory=F:\\FILM
+renaming_rule=[.language.].title.(.year.duration.)
 stats_agreement=0
 first_time=false
 duration_representation=0
