--- a/src/preferences.ini
+++ b/src/preferences.ini
@@ -1,5 +1,5 @@
 [General]
-last_visited_directory=F:\\FILM
+last_visited_directory=/home/alberto/Video
 renaming_rule=[.language.].title.(.year.duration.)
 stats_agreement=0
 first_time=false
