--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,3 +5,4 @@ encoding//src/main.py=latin1
 encoding//src/movie.py=latin1
 encoding/pack_source.py=latin1
 encoding/setup.py=latin1
+encoding/stats.py=latin1
