--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,7 @@ encoding//src/exceptionhandler.py=latin1
 encoding//src/gui.py=latin1
 encoding//src/main.py=latin1
 encoding//src/movie.py=latin1
+encoding//src/utils.py=latin1
 encoding/pack_source.py=latin1
 encoding/setup.py=latin1
 encoding/stats.py=latin1
