correction on detecting previously created archive

--- a/.hgignore
+++ b/.hgignore
@@ -15,3 +15,7 @@ syntax: regexp
 ^src/preferences\.ini$
 syntax: regexp
 ^src/preferences\.ini$
+syntax: regexp
+^src/preferences\.ini$
+syntax: regexp
+^src/preferences\.ini$
